Walleto Changed to Newspaper Boy

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@ionic/react": "5.3.3",
     "@ionic/react-router": "5.3.3",
+    "ionicons": "^5.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3"
   },
